correct z-indexes for overworld

--- a/src/components/OverworldCanvas/OverworldCanvas.css
+++ b/src/components/OverworldCanvas/OverworldCanvas.css
@@ -2,7 +2,6 @@
 	position: absolute;
 	top: calc(var(--SIZE) * 3.5px);
 	left: calc(var(--SIZE) * 8px);
-	z-index: var(--PLAYER_CANVAS_INDEX);
 }
 #overworldCanvas {
 	position: absolute;
@@ -10,9 +9,8 @@
 	left: calc(var(--SIZE) * 8px + (var(--SIZE) * var(--OFFSET_LEFT) * 1px));
 	z-index: var(--OVERWORLD_CANVAS_INDEX);
 }
-#occupantCanvas {
+.occupantCanvas {
 	position: absolute;
 	top: calc(var(--SIZE) * 4px + (var(--SIZE) * var(--OFFSET_TOP) * 1px));
 	left: calc(var(--SIZE) * 8px + (var(--SIZE) * var(--OFFSET_LEFT) * 1px));
-	z-index: calc(var(--OVERWORLD_CANVAS_INDEX) + 1);
 }
